fix(test): use readAllBytes instead of Files.readString in unit test
Files.readString is unavailable in the Android unit-test compile target.

Co-authored-by: Martin DONADIEU <martindonadieu@gmail.com>